--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,42 +1,18 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Mulish:wght@300;400&family=Poppins:wght@200&family=Roboto:wght@300&family=Work+Sans:wght@100&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Mulish:wght@300;400&family=Poppins:wght@200;300&family=Roboto:wght@300&family=Work+Sans:wght@100&display=swap');
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  /* font-family: 'Mulish', sans-serif; */
+font-family: 'Poppins', sans-serif;
+/* font-family: 'Roboto', sans-serif; */
+/* font-family: 'Work Sans', sans-serif; */
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+:root {
+  --topBack: #e40046;
+  --navColor: #d8d8d8d8;
+  --btnBack: #333;
+  --navBack: rgb(232, 10, 10);
 }
